# OpenGL-ModelViewer

./: CMakeLists.txt  README.md
include/assimp/lib/: assimp-vc143-mtd.lib
shaders/: fragment.glsl  geometry.glsl  vertex.glsl
src/: config.ini  main.cpp
src/graphics/: camera.cpp  camera.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h
